# Momenta-AVS

./: Cargo.toml  Dockerfile  README.md  settings.env  test_addresses.txt
contracts/src/: ITangleTaskManager.sol  TangleTaskManager.sol
db/: 0a546442-918a-467a-bd82-1ef4b7029374  0b8d3a99-ca51-435a-9106-1cee96ec41da  0c787227-b1d4-4d2f-a5eb-56a2dcafc08c  21faae43-9200-4191-9083-63dba0c55bae  3c904305-a82f-4eb7-b86d-5db0cdf75994  3d34c58f-e55f-4461-b25f-94e1ae6ae891  4600792d-dd6c-45ae-b30e-f2c68abc9fc2  4d320ef4-ed09-4e93-a7c0-bd325cca9bbd  65f492fc-5d61-4524-bb3c-d5efdf954f53  6794c7b7-7977-44ac-8b2c-8125af00963b  7a09ca00-fb6c-4878-976f-90ede4cbac53  85027a0a-1977-484d-be58-16048c26153d  93e81a4a-bc6f-4ad2-b47d-9b710db8cd31  9be60ef6-6c8d-401b-9c5e-682df95ee32f  9f0d34c3-bdf1-43cf-a018-4299d934eddf  a528c006-7e68-4835-b241-7540e91d1327  a78cbdf2-7acd-4c2a-aa84-017f2d2974b8  b23f5a52-b552-4343-bda4-09a972e6d59b  b2abbb5c-0ad7-46ba-977a-b766fa995cee  bca1715a-6221-4c5a-a818-8c850c321840  bf7a5bf6-84a0-47f4-9ed2-8bb9baeae6ca  c3050409-324d-4954-97d2-23d8508f1aee  c9873c98-ff0d-42a8-85c2-1c5a8b6548e5  d11bbf57-5d98-48a6-b214-04a794af904f  d825f8e7-1577-431b-88ec-7ff2137bc9f2  e3fbad5e-33aa-40d7-b1cf-c54e12f49280  f6d9974d-acba-45cc-9a6f-6313b8190fd5  faf2f5e4-5681-4322-837e-ef7e3d6b2f89  fbd4f6f5-a7d7-4087-a0d1-9361cba09958
src/: context.rs  error.rs  lib copy.rs  lib.rs  main.rs
